--- a/Louwrens/lecture3-casa/CASA.ipynb
+++ b/Louwrens/lecture3-casa/CASA.ipynb
@@ -59,13 +59,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# working through CASA lecture\n",
+    "+ you have a Voltage Pattern (VP)\n",
+    "+ can squint - important for observations far away\n",
+    "+ CASA creates sky-equation\n",
+    "+ then ueses sky-equation to make a prediction\n",
+    "+ **thermal noise** section for noise setting\n",
+    "\n",
+    "\n",
+    "## plots that simobserve give us\n",
+    "![](figs/gauss-1.meerkat.observe.png)\n",
+    "+ (LT) allivation as a function of time \n",
+    "    + red thing shows window that we've observed\n",
+    "+ (RT) antenna configuration "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#"
+   ]
   }
  ],
  "metadata": {
